--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "use-query-params": "^1.2.2",
@@ -71,6 +72,7 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-swipeable-views": "^0.13.1",
     "@types/styled-components": "^5.1.9"
   }
 }
